fix spacing

--- a/css/style.css
+++ b/css/style.css
@@ -9,64 +9,64 @@ body{
 
 /*Make the h1 heading bigger with a bold font*/
 h1{
-	font-size: 42px; 
+	font-size:42px; 
     text-align: center;
-	padding: 15px;
+	padding:15px;
 }
 
 h2{
-    font-size: 30px;
+    font-size:30px;
     color: #0D0D0D;
 }
 
 p {
-    font-size: 24px; 
-    padding: 10px 0 0 10px;
+    font-size:24px; 
+    padding:10px 0 0 10px;
 }
   
 img {
-    width: 250px;
+    width:250px;
     display: block;
-    margin: 0 auto;
-    border: 10px dashed #ffffff;
+    margin:0 auto;
+    border:10px dashed #ffffff;
 }
 
 div {
-    min-height: 125px;
-    padding: 20px;
-    border: 3px solid #FFFFFF;
+    min-height:125px;
+    padding:20px;
+    border:3px solid #FFFFFF;
 }
 
 .introduction{
-    border-radius: 15px;
-    margin-top: 15px;
-    line-height: 2;
+    border-radius:15px;
+    margin-top:15px;
+    line-height:2;
 }
 
 .red{
     background-color: #ff0000;
     text-align: right;
-    margin-left: 50px;
-    border-bottom: 2px solid;
-    border-left: 5px solid; 
+    margin-left:50px;
+    border-bottom:2px solid;
+    border-left:5px solid; 
 }
 
 .blue{
     background-color: #0000ff; 
     color: #C4C4C4;
     text-align: left;
-    margin-right: 50px;
-    border-right: 5px solid;
-    border-top: 2px solid;
+    margin-right:50px;
+    border-right:5px solid;
+    border-top:2px solid;
 }
 
 .yellow{
     background-color: #ffff00;
     color: #707070;
     text-align: right;
-    margin-left: 50px;
-    border-left: 5px solid;
-    border-bottom: 2px solid;
+    margin-left:50px;
+    border-left:5px solid;
+    border-bottom:2px solid;
 }
 
 .green{
@@ -79,11 +79,11 @@ div {
 
 footer{
 	background: linear-gradient(to bottom, #000000 0%, #0000ff 25%, #0066ff 70%, #000000 100%);
-    border: 5px solid #ffffff;
+    border:5px solid #ffffff;
 }
 
-/* footer p{
-    font-size: 20px;
+footer p{
+    font-size:20px;
     text-align: right;
-    padding: 15px 15px 15px 0;
-} */
+    padding:15px 15px 15px 0;
+}
